fix pagination issue not aligning in predefined templates links

--- a/cdap-ui/app/features/adapters/etlapps.less
+++ b/cdap-ui/app/features/adapters/etlapps.less
@@ -388,6 +388,7 @@ body.theme-cdap.state-adapters-create {
 
   div.template-link {
     cursor: pointer;
+    width: 100%;
 
     p {
       color: lighten(@btn-default-color, 15%);
@@ -412,7 +413,6 @@ body.theme-cdap.state-adapters-create {
       border-bottom: 1px solid rgba(255, 255, 255, 0.3);
       margin: 10px auto;
     }
-
   }
 
   .start-well {
